--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -7,8 +7,23 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="ReadFileButton" Content="Прочитать файл" HorizontalAlignment="Left" Margin="71,350,0,0" VerticalAlignment="Top" Background="#FFA7A5A5" FontFamily="Cascadia Mono" FontSize="20" Click="ReadFileButton_Click"/>
-        <!--<Label x:Name="ShowFileLabel" Content="Label" HorizontalAlignment="Left" Margin="431,67,0,0" VerticalAlignment="Top" FontFamily="Cascadia Code" FontSize="20"/>-->
-
+        <Button x:Name="ReadFileButton" Content="Прочитать файл" HorizontalAlignment="Left" Margin="69,381,0,0" VerticalAlignment="Top" Background="#FFA7A5A5" FontFamily="Cascadia Mono" FontSize="20" Click="ReadFileButton_Click"/>
+        <TextBox x:Name="TB1" HorizontalAlignment="Left" Margin="432,79,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="432,55,0,0" TextWrapping="Wrap" Text="Дата" VerticalAlignment="Top"/>
+        <TextBox x:Name="TB2" HorizontalAlignment="Left" Margin="432,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="432,102,0,0" TextWrapping="Wrap" Text="Имя" VerticalAlignment="Top"/>
+        <TextBox x:Name="TB3" HorizontalAlignment="Left" Margin="432,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="432,149,0,0" TextWrapping="Wrap" Text="Фамилия" VerticalAlignment="Top"/>
+        <TextBox x:Name="TB4" HorizontalAlignment="Left" Margin="432,225,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="432,201,0,0" TextWrapping="Wrap" Text="Отчество" VerticalAlignment="Top"/>
+        <TextBox x:Name="TB5" HorizontalAlignment="Left" Margin="557,79,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="557,55,0,0" TextWrapping="Wrap" Text="Город" VerticalAlignment="Top"/>
+        <TextBox x:Name="TB6" HorizontalAlignment="Left" Margin="557,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="557,105,0,0" TextWrapping="Wrap" Text="Страна" VerticalAlignment="Top"/>
+        <TextBox x:Name="ResultTb" IsReadOnly="True" HorizontalAlignment="Left" Margin="432,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFCFCFCF"/>
+        <TextBlock HorizontalAlignment="Left" Margin="432,266,0,0" TextWrapping="Wrap" Text="Результат" VerticalAlignment="Top"/>
+        <Button x:Name="FindBut"  VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="20 0 0 120"  Width="100" Height="30" Content="Найти"  Background="#FFA7A5A5" FontFamily="Cascadia Mono" FontSize="20" Click="FindBut_Click" Command="{Binding ElementName=ExportToXMLBut, Mode=OneWay}"/>
+        <Button x:Name="ExportToXMLBut" VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="20 0 0 60" Content="Экспорт в XML"  Background="#FFA7A5A5" FontFamily="Cascadia Mono" FontSize="20" Click="ExportXMLBut_Click"/>
+        <Button x:Name="ExportToExcelBut" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20" Content="Экспорт в Excel" Background="#FFA7A5A5" FontFamily="Cascadia Mono" FontSize="20" Click="ExportExcelBut_Click"/>
     </Grid>
 </Window>
